--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "axios": "^1.9.0",
     "firebase": "^11.7.3",
     "react": "^19.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0",
+    "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
